--- a/sources/html/Main-page-interactive.ejs
+++ b/sources/html/Main-page-interactive.ejs
@@ -38,9 +38,9 @@
             <div class="message-area-header" id="msg-are-head" rID="root">
                 <div class="message-box-h-member" id="msg-box-h-mem">
                     <i class="fas fa-users"></i>
-                    <p>Long,</p>
-                    <p>Quân,</p>
-                    <p>Vũ</p>
+                    <p>Dương,</p>
+                    <p>Hien,</p>
+                    <p>Violet,</p>
                 </div>
                 <div class="message-box-h-out" id="msg-box-h-out">
                     <i class="fas fa-sign-out-alt"></i>
@@ -49,31 +49,38 @@
             <!-- boxID(string), peerID(string) , username (string), image  (blob) -->
             <div class="box-contains-class" id="box-contains-id">
                 <div class="message-area-body" id="msg-area-body-id">
-                    <ul class="message-area-ul-show" id="msg-area-ul-s-id" rID="root">
+                    <ul class="message-area-ul-show" id="msg-area-ul-s-id" rid="root">
                         <li class="message-guest" dir="ltr">
-                            <p class="guest-name-inside">Long đẹp trai</p>
+                            <p class="guest-name-inside">Thuy Hien</p>
                             <p class="msg-show">
-                                <img class="avatar-img" src="../image/unknow-avatar.png" alt="">
-                                <button class="msg-vid">Video Call</button>
+                                <img class="avatar-img" src="../image/kivio.png">
+                                <span class="msg-text">Hi!</span>
+                            </p>
+                        </li>
+                        <div class="clearfix"></div>
+                        <li class="message-guest" dir="ltr">
+                            <p class="guest-name-inside">Thuy Duong</p>
+                            <p class="msg-show">
+                                <img class="avatar-img" src="../image/av1.png" alt="">
+                                <span class="msg-text">Hi!</span>
                             </p>
                         </li>
                         <div class="clearfix"></div>
                         <li class="message-host" dir="rtl">
-                            <p class="host-name-inside">Long đẹp trai</p>
+                            <p class="host-name-inside">Bùi Phi Long</p>
                             <p class="msg-show">
-                                <img class="avatar-img" src="../image/unknow-avatar.png" alt="">
-                                <img class="msg-img" src="../image/unknow-avatar.png" alt="">
+                                <img class="avatar-img" src="../image/bpl.png" alt="">
+                                <span class="msg-text">Hello!</span>
                             </p>
                         </li>
                         <div class="clearfix"></div>
                         <li class="message-host" dir="rtl">
-                            <p class="host-name-inside">Long đẹp trai</p>
-                            <p class="msg-show">
-                                <img class="avatar-img" src="../image/unknow-avatar.png" alt="">
-                                <button class="msg-vid">Video Call</button>
-                            </p>
-                        </li>
-                        <div class="clearfix"></div>
+                                <p class="host-name-inside">Bùi Phi Long</p> 
+                                <p class="msg-show">
+                                    <img class="avatar-img" alt="" src="../image/unknow-avatar.png">
+                                     <img class="msg-img" src="../image/primary avt.png" alt="">
+                                    </p>
+                            </li>
                     </ul>
                 </div>
             </div>
@@ -82,6 +89,7 @@
                 <input type="text" class="input-send-message" id="input-send-msg-id"
                     placeholder="Enter your message here!">
                 <p class="btn-send-message" id="btn-send-msg-id" rID="root"><i class="fas fa-paper-plane"></i></p>
+                
             </div>
         </div>
 
@@ -168,7 +176,8 @@
             <div class="clearfix"></div>
             <div class="info-area">
                 <div class="introduction-form" id="info-form-id">
-                    Some introduction here
+                    <p>Share to be better !</p>
+                    <img src="../image/background.png" alt="">
                 </div>
                 <div class="signin-form" id="signin-form-id" style="display: none;">
                     <div class="signin-title">Sign up</div>
@@ -214,7 +223,7 @@
                                 <input type="file" id="avatar-sign-up-id" class="avatar-sign-up-class"
                                     autocomplete="off" accept="image/*" style="display: none;"
                                     value="sources/image/unknow-avatar.png">
-                                <label for="avatar-sign-up-id" class="label-file-input"><i  class="far fa-images"></i>
+                                <label for="avatar-sign-up-id" class="label-file-input"><i class="far fa-images"></i>
                                     <em class="imageDesciption">Put your avatar here</em>
                                 </label>
                             </p>
