--- a/sources/css/Main-page-interactive.css
+++ b/sources/css/Main-page-interactive.css
@@ -631,6 +631,7 @@ html {
     width: 80px;
     height: 80px;
     border-radius: 50%;
+    cursor: pointer;
 }
 .view-fullname{
     float: right;
